# log-analyzer_v4

./: README.md  setup.cfg  visualize.py
analyzer/: core.py  launch_dashboard.py
log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
report/: suspicious_activity.json
