[metadata]
name = log-analyzer
version = 0.1
author = Your Name
description = SSH log analyzer with GeoIP and Streamlit dashboard
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = .
include_package_data = true
python_requires = >=3.7
install_requires =
    requests
    pandas
    matplotlib
    streamlit

[options.entry_points]
console_scripts =
    loganalyze = analyzer.cli:main
    sshdashboard = analyzer.launch_dashboard:main
